# MASA-OpenCL

./: .cproject  .gitignore  .project  Makefile  Makefile.am  Makefile.in  README  cgdb.sh  comp.sh  configure  configure.ac  configure.ac.cl  configure.scan  copia.sh  g.sh  git-pull-subtrees.sh  nul_  rodar.sh  test.sh
libs/masa-core/: .cproject  .gitignore  .project  ChangeLog  DEVELOPMENT  Makefile  Makefile.am  Makefile.in  README  TODO  config.status  configure  configure.ac  cudalign.kdev4  deploy.sh  undeploy.sh
libs/masa-core/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libs/masa-core/doxygen/: .gitignore
libs/masa-core/src/: .gitignore  config.h.in
libs/masa-core/src/common/: AlignerManager.cpp  AlignerManager.hpp  AlignerPool.cpp  AlignerPool.hpp  BestScoreList.cpp  BestScoreList.hpp  BlocksFile.cpp  BlocksFile.hpp  Crosspoint.hpp  CrosspointsFile.cpp  CrosspointsFile.hpp  Job.cpp  Job.hpp  Properties.cpp  Properties.hpp  RecurrentTimer.cpp  RecurrentTimer.hpp  SpecialRowReader.cpp  SpecialRowReader.hpp  SpecialRowWriter.cpp  SpecialRowWriter.hpp  Status.cpp  Status.hpp  Timer.cpp  Timer.hpp  cudalign.hpp  macros.hpp  utils.cpp  utils.hpp
libs/masa-core/src/common/biology/: Alignment.cpp  Alignment.hpp  AlignmentBinaryFile.cpp  AlignmentBinaryFile.hpp  AlignmentParams.cpp  AlignmentParams.hpp  Constants.hpp  Sequence.cpp  Sequence.hpp  SequenceData.cpp  SequenceData.hpp  SequenceInfo.cpp  SequenceInfo.hpp  SequenceModifiers.cpp  SequenceModifiers.hpp  biology.hpp
libs/masa-core/src/common/buffer/: Buffer.cpp  Buffer.hpp  BufferFactory.cpp  BufferFactory.hpp  BufferLogger.cpp  BufferLogger.hpp  FileBuffer.cpp  FileBuffer.hpp  NullBuffer.cpp  NullBuffer.hpp  SocketBuffer.cpp  SocketBuffer.hpp
libs/masa-core/src/common/configs/: ConfigParser.cpp  ConfigParser.hpp  Configs.cpp  Configs.hpp
libs/masa-core/src/common/exceptions/: IOException.cpp  IOException.hpp  IllegalArgumentException.cpp  IllegalArgumentException.hpp  exceptions.hpp
libs/masa-core/src/common/io/: Buffer2.cpp  Buffer2.hpp  BufferLogger.cpp  BufferLogger.hpp  BufferedCellsReader.cpp  BufferedCellsReader.hpp  BufferedCellsWriter.cpp  BufferedCellsWriter.hpp  BufferedStream.cpp  BufferedStream.hpp  CellsReader.hpp  CellsWriter.hpp  DummyCellsReader.cpp  DummyCellsReader.hpp  DummyCellsWriter.cpp  DummyCellsWriter.hpp  FileCellsReader.cpp  FileCellsReader.hpp  FileCellsWriter.cpp  FileCellsWriter.hpp  (+19 more)
libs/masa-core/src/libmasa/: AbstractAligner.cpp  AbstractAligner.hpp  AbstractAlignerParameters.cpp  AbstractAlignerParameters.hpp  AbstractAlignerSafe.cpp  AbstractAlignerSafe.hpp  AbstractBlockAligner.cpp  AbstractBlockAligner.hpp  AbstractBlockProcessor.cpp  AbstractBlockProcessor.hpp  AbstractDiagonalAligner.cpp  AbstractDiagonalAligner.hpp  BlockAlignerParameters.cpp  BlockAlignerParameters.hpp  IAligner.hpp  IManager.hpp  Partition.cpp  Partition.hpp  capabilities.hpp  libmasa.cpp  libmasa.hpp  libmasaTypes.hpp
libs/masa-core/src/masanet/: MasaNet.cpp  MasaNet.hpp  MasaNetCLI.cpp  MasaNetCLI.hpp  MasaNetCallbacks.hpp  MasaNetJob.cpp  MasaNetJob.hpp  MasaNetStatus.cpp  MasaNetStatus.hpp  Peer.cpp  Peer.hpp  PeerList.cpp  PeerList.hpp
libs/masa-core/src/stage1/: sw_stage1.cpp  sw_stage1.h
libs/masa-core/src/stage2/: sw_stage2.cpp  sw_stage2.h
libs/masa-core/src/stage3/: sw_stage3.cpp  sw_stage3.h
libs/masa-core/src/stage4/: sw_stage4.cpp  sw_stage4.h
libs/masa-core/src/stage5/: sw_stage5.cpp  sw_stage5.h
libs/masa-core/src/stage6/: sw_stage6.cpp  sw_stage6.h
libs/masa-core/src/testing/: testing.cpp
(+89 files in other folders)
